--- a/YoutubeDownload/Back/Dockerfile
+++ b/YoutubeDownload/Back/Dockerfile
@@ -3,8 +3,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app  # mudar de /src para /app
 
 # Copia apenas o csproj e restaura pacotes
-COPY ["Back/YoutubeDownload.csproj", "./"]
-COPY Back/. .
+COPY ["YoutubeDownload.csproj", "./"]
 RUN dotnet restore
 
 # Copia tudo da pasta back
