Alteração do Program e Dockerfile back

--- a/YoutubeDownload/Back/Dockerfile
+++ b/YoutubeDownload/Back/Dockerfile
@@ -1,21 +1,24 @@
 # Stage 1: Build
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
 
-# Diretório de trabalho
-WORKDIR /app
-
-# Copia apenas o csproj e restaura pacotes
+# Copia e restaura dependências
 COPY ["YoutubeDownload.csproj", "./"]
 RUN dotnet restore
 
-# Copia todos os arquivos do backend
+# Copia o restante e publica
 COPY . .
-RUN dotnet publish -c Release -o /app/out
+RUN dotnet publish -c Release -o /out
 
 # Stage 2: Runtime
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
-COPY --from=build /app/out ./
 
-EXPOSE 5136
+# Copia o conteúdo publicado
+COPY --from=build /out .
+
+# Render define PORT automaticamente
+ENV ASPNETCORE_URLS=http://+:8080
+EXPOSE 8080
+
 ENTRYPOINT ["dotnet", "YoutubeDownload.dll"]
