Alteração do Program e Dockerfile back

--- a/YoutubeDownload/Back/Dockerfile
+++ b/YoutubeDownload/Back/Dockerfile
@@ -1,24 +1,19 @@
-# Stage 1: Build
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Copia e restaura dependências
 COPY ["YoutubeDownload.csproj", "./"]
 RUN dotnet restore
 
-# Copia o restante e publica
 COPY . .
-RUN dotnet publish -c Release -o /out
+RUN dotnet publish -c Release -o /app/publish
 
-# Stage 2: Runtime
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 
-# Copia o conteúdo publicado
-COPY --from=build /out .
+COPY --from=build /app/publish .
 
-# Render define PORT automaticamente
+# Apenas HTTP (Render faz HTTPS)
 ENV ASPNETCORE_URLS=http://+:8080
-EXPOSE 8080
 
+EXPOSE 8080
 ENTRYPOINT ["dotnet", "YoutubeDownload.dll"]
