--- a/YoutubeDownload/Back/Dockerfile
+++ b/YoutubeDownload/Back/Dockerfile
@@ -10,10 +10,11 @@ RUN dotnet publish -c Release -o /app/publish
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 
+# INSTALA FFMPEG NO LINUX (necessário para executar no Render)
+RUN apt-get update && apt-get install -y ffmpeg
+
 COPY --from=build /app/publish .
 
-# Apenas HTTP (Render faz HTTPS)
 ENV ASPNETCORE_URLS=http://+:8080
-
 EXPOSE 8080
 ENTRYPOINT ["dotnet", "YoutubeDownload.dll"]
