--- a/YoutubeDownload/Front/.env
+++ b/YoutubeDownload/Front/.env
@@ -1,1 +1,5 @@
+# Url de Api para o front-end
 VITE_API_URL=https://downloadyoutube-backend.onrender.com
+
+# Cookies do YouTube para o back-end
+YOUTUBE_COOKIES=VISITOR_INFO1_LIVE=valor; PREF=valor; YSC=valor;
