--- a/YoutubeDownload/Front/.env
+++ b/YoutubeDownload/Front/.env
@@ -2,4 +2,4 @@
 VITE_API_URL=https://downloadyoutube-backend.onrender.com
 
 # Cookies do YouTube para o back-end
-YOUTUBE_COOKIES=VISITOR_INFO1_LIVE=valor; PREF=valor; YSC=valor;
+# YOUTUBE_COOKIES=VISITOR_INFO1_LIVE=valor; PREF=valor; YSC=valor
