--- a/YoutubeDownload/Front/.env
+++ b/YoutubeDownload/Front/.env
@@ -1,4 +1,3 @@
 # Url de Api para o front-end
-VITE_API_URL=http://localhost:8080
-
+VITE_API_URL=https://uxorilocal-yoshie-nonadmittedly.ngrok-free.dev 
 
